HTML and CSS Complete (Has been validated)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header id="header">
         <h1>TK Photography</h1>
         <nav>
@@ -77,12 +78,13 @@
                 <img src="photogallery-Elements/images/Wyoming.png" alt="Wyoming ">
                 <figcaption>Wyoming, 2021</figcaption>
             </figure>
+        </div>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
             <p>Please fill out this form and I'll connect with you soon.</p>
-            <form action="#" method="POST"></form>
+            <form action="#" method="POST">
                 <fieldset>
                     <legend>Your contact information</legend>
                     
@@ -102,6 +104,7 @@
 
     <footer>
         <p>&copy; 2021 TK Photography</p>
+        <p><a href="#top" class="back-to-top">Top</a></p>
     </footer>
 
 </main>
